# rpp

./: Cargo.toml  LICENSE  README.md  build.rs
rpp-build/: Cargo.toml
rpp-build/src/: code.hpp  config  config.toml  enum_value.rs  helpers.rs  info.rs  lib.rs  macros.rs  metadata.rs  parser.rs  ty.rs  type_info  value.rs
rpp-build/src/info/: enumeration.rs  member.rs  structure.rs
rpp-build/src/macros/: class.rs  enum_val.rs  ex.rs  expand.rs  export.rs  par_ty.rs  rust_macro.rs  ty.rs  val.rs  var.rs  wrap_const.rs  wrap_enum.rs  wrap_struct.rs  wrap_template.rs
rpp-build/src/macros/class/: arg.rs  attr.rs  base.rs  constructor.rs  explicit.rs  field.rs  method.rs  method_ident.rs  noexcept.rs  operator.rs
rpp-build/src/macros/export/: arg.rs  attr.rs  constructor.rs  derives.rs  method.rs  receiver.rs  refq.rs  using.rs
rpp-impl/: Cargo.toml
rpp-impl/src/: lib.rs
src/: cpp_repr.rs  lib.rs  move_to.rs  slot.rs  stack_box.rs
