[package]
name = "rpp"
version = "0.1.0"
edition = "2021"

[dependencies]
rpp-impl = { version = "0.1.0", path = "rpp-impl" }

[build-dependencies]
rpp-build = { version = "0.1.0", path = "rpp-build" }

[features]
default = ["std"]
"c++20" = ["rpp-build/c++20"]
qt = ["rpp-build/qt"]
libc = ["rpp-build/libc"]
alloc = []
std = ["alloc"]

[workspace]
members = [
	"rpp-impl",
	"rpp-build",
]
