[package]
name = "rpp-build"
version = "0.1.0"
edition = "2021"
authors = ["<thurinann@mail.com>"]
categories = ["development-tools::ffi", "api-bindings"]
description = "Interop between Rust and C++"
keywords = ["ffi", "c++"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/thurinann/rpp"

[dependencies]
anyhow = "1.0.70"
bitflags = { version = "2.2.1", features = ["serde"] }
cargo_metadata = "0.15.4"
cc = "1.0.79"
clang = { version = "2.0.0", features = ["clang_10_0", "runtime"] }
convert_case = "0.6.0"
lazy_static = "1.4.0"
libc = { version = "0.2.141", optional = true }
proc-macro2 = { version = "1.0.56", features = ["span-locations"] }
quote = "1.0.26"
rmp-serde = "1.1.1"
ron = "0.8.0"
serde = "1.0.159"
serde_derive = "1.0.159"
serde_json = "1.0.95"
sha256 = "1.1.2"
syn = { version = "2.0.13", features = ["visit", "full", "extra-traits", "visit-mut"] }
tempdir = "0.3.7"
uuid = { version = "1.3.0", features = ["v4"] }
walkdir = "2.3.3"

[features]
qt = []
libc = ["dep:libc"]
"c++20" = []
